--- a/templates/restaurant_list.html
+++ b/templates/restaurant_list.html
@@ -5,17 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Restaurant List</title>
   </head>
+  <style>
+    /* Add your CSS styles here */
+    h2 {
+      color: #333;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      margin-bottom: 10px;
+    }
+  </style>
+
   <body>
     <h1>Restaurant List</h1>
-    <ul>
-      {% for restaurant in restaurants %}
-      <li>{{ restaurant.name }}</li>
-      <ul>
-        {% for item in restaurant.items.all %}
-        <li>{{ item.name }}: {{ item.price }}</li>
-        {% endfor %}
-      </ul>
-      {% endfor %}
-    </ul>
+    <form method="get" action="{% url 'search_results' %}">
+      {% csrf_token %}
+      <label for="search-query">Search:</label>
+      <input type="text" id="search-query" name="query" required />
+      <button type="submit">Search</button>
+    </form>
   </body>
 </html>
