--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -1,19 +1,59 @@
 <style>
-  /* Add your CSS styles here */
-  h2 {
+  body {
+    font-family: "Arial", sans-serif;
+    background-color: #f5f5f5;
     color: #333;
+  }
+
+  h2 {
+    color: #007bff;
+  }
+
+  h3 {
+    color: #28a745;
+  }
+
+  form {
+    margin-bottom: 20px;
+  }
+
+  label {
+    font-weight: bold;
+    color: #333;
+  }
+
+  input[type="text"] {
+    width: 200px;
+    padding: 8px;
+    margin-right: 10px;
+  }
+
+  button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 8px 12px;
+    border: none;
+    cursor: pointer;
   }
 
   ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
   }
 
-  li {
-    margin-bottom: 10px;
-  }
-  .item-name {
+  li.item-name {
     font-weight: bold;
+    color: #dc3545;
+  }
+
+  li.restaurant-info {
+    margin-left: 20px;
+    color: #6c757d;
+  }
+
+  p {
+    color: #dc3545;
   }
 </style>
 
@@ -30,7 +70,9 @@
   {% for item in matching_items %}
   <li class="item-name">{{ item.name }} - {{ item.price }}</li>
   {% for restaurant in item.restaurant_set.all %}
-  <li>Restaurant: {{ restaurant.name }} - {{ restaurant.location }}</li>
+  <li class="restaurant-info">
+    Restaurant: {{ restaurant.name }} - {{ restaurant.location }}
+  </li>
   {% endfor %} {% endfor %}
 </ul>
 {% else %}
